added viewcardmodal and changed style of budget and report page

--- a/budget.html
+++ b/budget.html
@@ -213,7 +213,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                   <a href="javascript:;" id="a1" onclick="cg(this)" ><i class="far fa-edit"></i></a>
+                                   <a href="javascript:;" id="a1" onclick="cg(this)" class="btn" ><i class="far fa-edit"></i></a>
                               </span>
                                     </h3>
                                 </div>
@@ -233,7 +233,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="javascript:;" id="a2" onclick="cg(this)" ><i class="far fa-edit"></i></a>
+                                    <a href="javascript:;" id="a2" onclick="cg(this)" class="btn"><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -253,7 +253,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="javascript:;" id="a3" onclick="cg(this)" ><i class="far fa-edit"></i></a>
+                                    <a href="javascript:;" id="a3" onclick="cg(this)" class="btn"><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -274,7 +274,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                     <a href="javascript:;" id="a4" onclick="cg(this)" ><i class="far fa-edit"></i></a>
+                                     <a href="javascript:;" id="a4" onclick="cg(this)" class="btn"><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -295,7 +295,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="javascript:;" id="a5" onclick="cg(this)" ><i class="far fa-edit"></i></a>
+                                    <a href="javascript:;" id="a5" onclick="cg(this)"  class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
