--- a/account.html
+++ b/account.html
@@ -62,7 +62,7 @@
               <div class="col-md-4">
                 <div class="budget-card-view">
                   <header class="card-header transparent">Profile <a href="#" data-toggle="modal"
-                    data-target="#editprofileModal" class="add-a-card"><i class="fas fa-edit" ></i></a></header>
+                    data-target="#editprofileModal" class="add-a-card"><i class="far fa-edit" ></i></a></header>
                   <div class="card-content" id="profile" >
                       <ul>
                           <li class="card-balance">
@@ -140,7 +140,8 @@
                                           </div>
                                           <a class="card-link add-another-ba" data-toggle="collapse" href="#actions"><i class="fas fa-caret-down dropdownicon"></i>Manage This Card</a>
                                           <div class="collapse action-collapse" id="actions">
-                                              <a class="Cardaction btn" data-toggle="collapse" href="#"><i class="far fa-eye"></i></a>
+                                              <button class="Cardaction btn" data-toggle="modal"
+                                              data-target="#viewCardModal"><i class="far fa-eye"></i></button>
                                             <button class="Cardaction btn" data-toggle="collapse" onclick="remove('chase')"><i class="far fa-trash-alt"></i></button>
                                           </div>
                                       </div>
@@ -157,7 +158,8 @@
                                           </div>
                                           <a class="card-link add-another-ba" data-toggle="collapse" href="#Boa-actions"><i class="fas fa-caret-down dropdownicon"></i>Manage This Card</a>
                                           <div class="collapse action-collapse" id="Boa-actions">
-                                              <a class="Cardaction btn" data-toggle="collapse" href="#"><i class="far fa-eye"></i></a>
+                                              <a class="Cardaction btn" data-toggle="modal"
+                                              data-target="#viewCardModal"><i class="far fa-eye"></i></a>
                                             <button class="Cardaction btn" data-toggle="collapse" onclick="remove('Boa')"><i class="far fa-trash-alt"></i></button>
                                           </div>
                                       </div>
@@ -227,6 +229,60 @@
         </div>
       </div>
       <!-- End of addCardModal-->
+       <!-- viewCardModal -->
+       <div class="modal modal-wrap" tabindex="-1" role="dialog" id="viewCardModal">
+        <div class="modal-dialog bugdet-modal border-0" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Your Card</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" height>
+                <div class="form-group row">
+                    <div class="col-sm-3">Card Name</div>
+                    <div class="col-sm-9">
+                      <input type="text" class="form-control buget-radius" id="CardName" value="CHASE COLLEGE">
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="col-sm-3">Status</div>
+                    <div class="col-sm-9">
+                      <select class="custom-select" id="CardStatus">
+                        <option value="0" selected>Active</option>
+                        <option value="1">Inactive</option>
+                      </select>                    
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                      <div class="col-sm-3">Type</div>
+                      <div class="col-sm-9">
+                          <input type="text" class="form-control buget-radius" id="CardType" value="Checking" readonly>
+                      </div>
+                  </div>
+            </div>
+            <div class="modal-footer bugdet-modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary budget-radius transparent"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button onclick="save()" type="button" class="btn btn-primary budget-radius primary-color border-0">
+                Save
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of viewCardModal-->
       <!-- editprofileModal -->
       <div class="modal modal-wrap" tabindex="-1" role="dialog" id="editprofileModal">
           <div class="modal-dialog bugdet-modal border-0" role="document">
